# PUMA-track2-submit

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  THIRD_PARTY.md  THIRD_PARTY_PROMETHEUS_LICENSE  build.sh  inference.sh  pyproject.toml  requirements.txt  save.sh
configs/: submission.toml
docs/: architecture.md  handoff.md
models/: README.md
scripts/: build.sh  check_checkpoint.py  save.sh  test_container.sh  tune_nuclei_threshold.py
src/prometheus/: __init__.py  api.py  checkpoint.py
src/prometheus/config/: __init__.py
src/prometheus/domain/: __init__.py  labels.py  samples.py  types.py
src/prometheus/inference/: __init__.py  nuclei_decoder.py  predictor.py  preprocessing.py
src/prometheus/io/: __init__.py  image.py  puma_json.py  tissue_tiff.py
src/prometheus/submission/: validation.py
src/puma_submission/: __init__.py  contract.py  prepare.py  run.py  validate_cli.py  validation.py
tests/contracts/: test_core_imports.py
tests/unit/: test_checkpoint.py  test_prometheus_predictor.py  test_puma_io.py  test_spatial.py
tests/unit/config/: test_deployment_config.py
tests/unit/models/: test_prometheus_net.py
tests/unit/submission/: __init__.py  test_contract.py  test_prepare.py  test_run.py  test_validation.py
