[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puma-prometheus-submission"
version = "1.0.0"
description = "PrometheusNet inference container for PUMA Track 2"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "numpy==2.4.6; python_version >= '3.11'",
    "numpy==2.2.6; python_version < '3.11'",
    "opencv-python-headless==4.13.0.92",
    "tifffile==2026.3.3; python_version >= '3.11'",
    "tifffile==2025.5.10; python_version < '3.11'",
    "timm==1.0.27",
    "tomli>=2.0; python_version < '3.11'",
    "torch==2.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "pytest-cov>=4,<7",
    "ruff>=0.5,<1",
]

[project.scripts]
puma-submit = "puma_submission.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: integration tests",
    "slow: slow tests",
    "gpu: tests requiring CUDA",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
